--- a/lean.bib
+++ b/lean.bib
@@ -170,3 +170,9 @@ abstract="In this paper we explain how computational reflection can help build e
 isbn="978-3-540-69530-1"
 }
 
+@online{agda-stdlib,
+	title={Agda standard library},
+	author = {{The Agda Team}},
+	url = {https://wiki.portal.chalmers.se/agda/Libraries/StandardLibrary},
+	note = {version 1.3 for Agda 2.6.1},
+}
