--- a/lean.bib
+++ b/lean.bib
@@ -28,15 +28,23 @@ series="International Conference on Automated Deduction (CADE-25)",
 year="2015",
 publisher="Springer International Publishing",
 pages="378--388",
+doi = {10.1007/978-3-319-21401-6_26},
 }
 
-@InProceedings{mathlib,
-	title={The Lean mathematical library},
-	author={{The mathlib Community}},
-	year={2020},
-	editor={Blanchette, J. and Hrițcu, C.},
-	series = {Certified Programs and Proofs (CPP 2020)},
-	publisher = {ACM},
+@inproceedings{mathlib,
+author = {{The mathlib Community}},
+title = {The Lean Mathematical Library},
+year = {2020},
+isbn = {9781450370974},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+doi = {10.1145/3372885.3373824},
+booktitle = {Proceedings of the 9th ACM SIGPLAN International Conference on Certified Programs and Proofs},
+pages = {367–381},
+numpages = {15},
+keywords = {formal library, mathlib, formal proof, Lean},
+location = {New Orleans, LA, USA},
+series = {CPP 2020}
 }
 
 @InProceedings{ring-tactic,
@@ -50,6 +58,7 @@ year="2005",
 publisher="Springer Berlin Heidelberg",
 pages="98--113",
 abstract="We present a new implementation of a reflexive tactic which solves equalities in a ring structure inside the Coq system. The efficiency is improved to a point that we can now prove equalities that were previously beyond reach. A special care has been taken to implement efficient algorithms while keeping the complexity of the correctness proofs low. This leads to a single tool, with a single implementation, which can be addressed for a ring or for a semi-ring, abstract or not, using the Leibniz equality or a setoid equality. This example shows that such reflective methods can be effectively used in symbolic computation.",
+doi = {10.1007/11541868_7},
 }
 
 @misc{norm-cast,
@@ -103,19 +112,6 @@ series={TFP 2009},
  series = {CPP’11}
 }
 
-@inproceedings{coq-ring-reflection,
- author = {Boutin, Samuel},
- title = {Using reflection to build efficient and certified decision procedures},
- year = {1997},
- isbn = {354063388X},
- publisher = {Springer-Verlag},
- address = {Berlin, Heidelberg},
- booktitle = {Proceedings of the Third International Symposium on Theoretical Aspects of Computer Software},
- pages = {515–529},
- numpages = {15},
- series = {TACS ’97}
-}
-
 @InProceedings{resolution-rcf,
 author="Akbarpour, Behzad
 and Paulson, Lawrence C.",
@@ -127,7 +123,8 @@ year="2007",
 publisher="Springer Berlin Heidelberg",
 pages="47--61",
 abstract="Experiments show that many inequalities involving exponentials and logarithms can be proved automatically by combining a resolution theorem prover with a decision procedure for the theory of real closed fields (RCF). The method should be applicable to any functions for which polynomial upper and lower bounds are known. Most bounds only hold for specific argument ranges, but resolution can automatically perform the necessary case analyses. The system consists of a superposition prover (Metis) combined with John Harrison's RCF solver and a small amount of code to simplify literals with respect to the RCF theory.",
-isbn="978-3-540-75560-9"
+isbn="978-3-540-75560-9",
+doi={10.1007/978-3-540-75560-9_6},
 }
 
 @InProceedings{hol_light,
@@ -140,7 +137,8 @@ year="1996",
 publisher="Springer Berlin Heidelberg",
 pages="265--269",
 abstract="HOL Light is a new version of the HOL theorem prover. While retaining the reliability and programmability of earlier versions, it is more elegant, lightweight, powerful and automatic; it will be the basis for the Cambridge component of the HOL-2000 initiative to develop the next generation of HOL theorem provers. HOL Light is written in CAML Light, and so will run well even on small machines, e.g. PCs and Macintoshes with a few megabytes of RAM. This is in stark contrast to the resource-hungry systems which are the norm in this field, other versions of HOL included. Among the new features of this version axe a powerful simplifier, effective first order automation, simple higher-order matching and very general support for inductive and recursive definitions.",
-isbn="978-3-540-49567-3"
+isbn="978-3-540-49567-3",
+	doi = {10.1007/BFb0031814},
 }
 
 @book{isabelle_hol,
@@ -153,7 +151,7 @@ publisher="Springer Berlin Heidelberg",
 abstract="This book is a tutorial on how to use the theorem prover Isabelle/HOL as a specification and verification system. Isabelle is a generic system for implementing logical formalisms, and Isabelle/HOL is the specialization of Isabelle for HOL,which abbreviates Higher-Order Logic. We introduce HOL step by step following the equation HOL = Functional Programming+ Logic.",
 isbn="978-3-540-45949-1",
 doi="10.1007/3-540-45949-9_1",
-url="https://doi.org/10.1007/3-540-45949-9_1"
+% url="https://doi.org/10.1007/3-540-45949-9_1"
 }
 
 @InProceedings{reflection-tactics,
@@ -167,7 +165,8 @@ publisher="Springer Berlin Heidelberg",
 address="Berlin, Heidelberg",
 pages="515--529",
 abstract="In this paper we explain how computational reflection can help build efficient certified decision procedure in reduction systems. We have developed a decision procedure on abelian rings in the Coq system but the approach we describe applies to all reduction systems that allow the definition of concrete types (or datatypes). We show that computational reflection is more efficient than an LCF-like approach to implement decision procedures in a reduction system. We discuss the concept of total reflection, which we have investigated in Coq using two facts: the extraction process available in Coq and the fact that the implementation language of the Coq system can be considered as a sublanguage of Coq. Total reflection is not yet implemented in Coq but we can test its performance as the extraction process is effective. Both reflection and total reflection are conservative extensions of the reduction system in which they are used. We also discuss performance and related approaches. In the paper,we assume basic knowledges of ML and proof-checkers.",
-isbn="978-3-540-69530-1"
+isbn="978-3-540-69530-1",
+	doi = {10.1007/11541868_7},
 }
 
 @online{agda-stdlib,
